<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2e7e7"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/bs_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/bs_name"
        android:textColor="#fa020a"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/logo"
            android:src="@drawable/snack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#FF5722" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/services_offered"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#fa020a"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="5"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/breakfast_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/first_meal"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#FF5722" />

            <ImageView
                android:id="@+id/breakfast_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/breakfast_text_view"
                android:src="@drawable/snack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/breakfast_image_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/first_meal_time"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2962FF"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lunch_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/second_meal"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#FF5722" />

            <ImageView
                android:id="@+id/lunch_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/lunch_text_view"
                android:scaleType="fitCenter"
                android:src="@drawable/lunch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/lunch_image_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/second_meal_time"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2962FF"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/special_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_meal"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#FF5722" />

            <ImageView
                android:id="@+id/special_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/special_text_view"
                android:scaleType="fitCenter"
                android:src="@drawable/fastfoodmeal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/special_image_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/third_meal_time"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2962FF"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/contacts_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/contact_title"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#009688" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/phone_image_view"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:src="@drawable/phone_icon" />

        <TextView
            android:id="@+id/phone_number_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/contact_phone_number"
            android:textColor="#057cfc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:src="@drawable/email_icon" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/contact_email"
            android:textColor="#057cfc" />

    </LinearLayout>

</LinearLayout>
